--- a/web/static/file/intra2021/index.html
+++ b/web/static/file/intra2021/index.html
@@ -91,13 +91,13 @@
                     </p>
                 </div>
                 <div class="col-xs-8 alert">
-                    <a href="images/act1.png"> <img src="images/act1.png" class=" col-xs-3"/> </a>
-					<a href="images/act2.png"><img src="images/act2.png" class=" col-xs-3"/> </a>
-					<a href="images/act3.png"><img src="images/act3.png" class=" col-xs-3"/> </a>
-                    <a href="images/act1-paysage.png"><img src="images/act1-paysage.png" class=" col-xs-3"/> </a>
-                    <a href="images/act2-paysage.png"><img src="images/act2-paysage.png" class=" col-xs-3"/> </a>
-                    <a href="images/act3-paysage.png"><img src="images/act3-paysage.png" class=" col-xs-3"/> </a>
-                    <a href="images/act1-tiroir.png"><img src="images/act1-tiroir.png" class=" col-xs-3"/> </a>
+                    <a href="img/act1.png"> <img src="img/act1.png" class=" col-xs-3"/> </a>
+					<a href="img/act2.png"><img src="img/act2.png" class=" col-xs-3"/> </a>
+					<a href="img/act3.png"><img src="img/act3.png" class=" col-xs-3"/> </a>
+                    <a href="img/act1-paysage.png"><img src="img/act1-paysage.png" class=" col-xs-3"/> </a>
+                    <a href="img/act2-paysage.png"><img src="img/act2-paysage.png" class=" col-xs-3"/> </a>
+                    <a href="img/act3-paysage.png"><img src="img/act3-paysage.png" class=" col-xs-3"/> </a>
+                    <a href="img/act1-tiroir.png"><img src="img/act1-tiroir.png" class=" col-xs-3"/> </a>
                 </div>
             </div>
 
