--- a/web/static/file/intra2021/index.html
+++ b/web/static/file/intra2021/index.html
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">420-5A5 : <strong>Programmation mobile</strong> Examen Intra</a>
+                    <a class="navbar-brand" href="#">420-4N6 : <strong>Programmation mobile</strong> Examen Intra</a>
                 </div>
                 <div class="navbar-collapse collapse navbar-right">
 
