--- a/web/static/file/intra2022/index.html
+++ b/web/static/file/intra2022/index.html
@@ -134,9 +134,9 @@
                         <p>
                             Le service retourne le nombre entré représenté de différentes manières.
                         </p>
-                        <pre>https://exercices-web.herokuapp.com/exam/representations/{nombre}</pre>
+                        <pre>https://4n6.azurewebsites.net/exam/representations/{nombre}</pre>
 						Exemple concret pour le nombre 123465:
-						<pre>https://exercices-web.herokuapp.com/exam/representations/123456</pre>
+						<pre>https://4n6.azurewebsites.net/exam/representations/123456</pre>
                         </br>
                         <strong>Affichage dans l'interface graphique</strong>
                         <p>
